--- a/index.html
+++ b/index.html
@@ -151,15 +151,19 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/disasterTweet.jpeg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>NLP with Disaster tweets</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                             Build a machine learning model that predicts which Tweets are about real disasters and which one’s aren’t.
                         </p>
-                        <a href="#">View Project</a>
+			<div class = "skills">NLP</div>
+			<div class = "skills">Keras Tokenizer</div>
+			<div class = "skills">Keras Models</div>
+			<div class = "skills">Bidirectional LSTM</div>
+                        <a href="https://github.com/gopalkatyarmal/NLP-Disaster-Tweet">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -188,37 +192,37 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
+<!--             <li>JavaScript</li> -->
+<!--             <li>Python</li>
             <li>Ruby</li>
             <li>Go</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>AngularJs</li> -->
+<!--             <li>React</li> -->
+<!--             <li>Elixir</li> -->
+<!--             <li>Java</li> -->
+<!--             <li>C</li> -->
+<!--             <li>C#</li> -->
+<!--             <li>C++</li> -->
+<!--             <li>Ruby on Rails</li> -->
             <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
+<!--             <li>Ruby</li> -->
+<!--             <li>Go</li> -->
             <li>Node.js</li>
             <li>AngularJs</li>
             <li>React</li>
-            <li>Elixir</li>
+<!--             <li>Elixir</li> -->
             <li>Java</li>
-            <li>C</li>
+<!--             <li>C</li>
             <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Ruby on Rails</li> -->
         </ul>
     </div>
     <!-- End #skills -->
 
-    <div id="contact">
+<!--     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/email@email.com">
@@ -230,14 +234,14 @@
         </div>
         <!-- End #contact-form -->
     </div>
-    <!-- End #contact -->
+    <!-- End #contact --> -->
 
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2023</span> Gopal Katyarmal
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -248,23 +252,23 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/gopalkatyarmal" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
-                        <li>
+<!--                         <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
+                        </li> -->
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/gopal-katyarmal-018291179/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
-                        <li>
+<!--                         <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
+                        </li> -->
+<!--                         <li>
                             <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
